[gd_scene load_steps=3 format=3 uid="uid://csmprn2qodqg1"]

[ext_resource type="Script" path="res://Code/Light.gd" id="1_3a6s1"]
[ext_resource type="Texture2D" uid="uid://c4uqhpvu21072" path="res://assets/pixil-frame-0_11.png" id="2_psgr0"]

[node name="Light" type="Area2D"]
scale = Vector2(2, 1)
collision_mask = 7
script = ExtResource("1_3a6s1")
strength = 225
range = 370
angle = 37
rot = 52

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="."]
position = Vector2(-106.5, 21)
scale = Vector2(1.44257, 3.91345)
polygon = PackedVector2Array(73.8267, -5.36611, 433.948, -73.0813, 433.948, 64.6488)

[node name="DamageTimer" type="Timer" parent="."]
wait_time = 0.5
autostart = true

[node name="PointLight2D" type="PointLight2D" parent="."]
shadow_enabled = true
texture = ExtResource("2_psgr0")
offset = Vector2(300, -45)

[connection signal="body_entered" from="." to="." method="_on_body_entered"]
[connection signal="body_exited" from="." to="." method="_on_body_exited"]
[connection signal="timeout" from="DamageTimer" to="." method="_on_damage_timer_timeout"]
